<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aboutUsBackgroundColor">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <ImageView
            android:id="@+id/about_acm_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/official_acm_logo"/>

        <TextView
            style="@style/AppTheme.AboutUsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_who_header"/>

        <!--Set Background to BLACK!-->
        <TextView
            style="@style/AppTheme.AboutUsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_who_info" />

        <TextView
            style="@style/AppTheme.AboutUsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_what_header"/>

        <TextView
            style="@style/AppTheme.AboutUsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_what_info_rule1" />

        <TextView
            style="@style/AppTheme.AboutUsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="12dp"
            android:text="@string/about_us_what_info_rule1sub"
            />

        <TextView
            style="@style/AppTheme.AboutUsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_what_info_rule2" />


    </TableLayout>

</ScrollView>
